--- a/app/fe/src/app/globals.css
+++ b/app/fe/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap");
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
@@ -55,4 +56,8 @@ img {
   background-origin: content-box;
   box-sizing: border-box;
   cursor: se-resize;
+}
+
+canvas {
+  font-family: "NanumGothic" !important;
 }
