--- a/app/fe/src/app/globals.css
+++ b/app/fe/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap"); */
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
@@ -58,6 +58,6 @@ img {
   cursor: se-resize;
 }
 
-canvas {
+/* canvas {
   font-family: "NanumGothic" !important;
-}
+} */
